--- a/jour1/10-exo.html
+++ b/jour1/10-exo.html
@@ -27,7 +27,20 @@
 </body>
 </html>
 <!--
-    créer un nouveau fichier 11-exo.html
+    créer un nouveau fichier 11-exo.html qui contient une balise script
+    créer 4 variables dans cette balise
 
-    
+    organisme = Doranco
+    formation = web developpement
+    duree = 4
+    unite = mois
+
+    à partir de ces 4 variables écrire dans la console du navigateur les phrases suivantes 
+
+    "Je suis une formation de web developpement pendant 4 mois"
+
+    "La formation a lieu auprès de Doranco"
+
+    utiliser la technique de concaténation qui vous convient pour réaliser ces deux chaines de caractères
+
 -->
