--- a/jour2/02-suite-traitement-boolean.html
+++ b/jour2/02-suite-traitement-boolean.html
@@ -60,13 +60,26 @@
         // password : initiation
 
 
+        // ! NOT
+
+        const etudiant = false;
+
+        // opérateur unaire = opérateur avec une variable 
+        const isAdmin = !etudiant;
+        // const isAdmin = !false ; 
+        // const isAdmin = true ; 
+
+        const prof = true;
+
+        const isSuperAdmin = !prof;
+        // const isSuperAdmin = !true ;
+        // const isSuperAdmin = false ;
 
 
 
-
-
-
-
+        // + - > < * => opérateur classique 
+        // valeur opérateur valeur 
+        const a = 2 + 3;
 
 
 
@@ -77,3 +90,21 @@
 </body>
 
 </html>
+<!--
+    créer le fichier 03-exo.html possedant une balise script 
+    9 comparaisons ?? true ou false ???
+
+        2 >= 2	
+        "a" == "ab"	
+        2 != 3 && 10 < 33	
+        "hello" > "bonjour" 	
+        2 ==  "2"	
+        2 === "2"	
+        (2 != 5 && 3 > 4 ) || 2 <= 14 	
+        2 != 5 && ( 3 > 4  || 2 <= 14 ) 	
+        2 != 5 && 3 > 4  || 2 <= 14  	
+-->
+
+const verif1 = 2 >= 2 ;
+// true 
+console.log(verif1)	
