--- a/jour2/03-exo.html
+++ b/jour2/03-exo.html
@@ -62,18 +62,32 @@
         // const i = true   ;
         console.log(i);
 
-        const j = 2 != 5 && 3 > 4 || 2 <= 14;
-        // const j = true && false  || true ; // && prioritaire sur || 
-        // const j = false  || true ; 
+        const j    = 2 != 5 && 3 > 4  || 2 <= 14;
+        // const j = true   && false  || true ; // && prioritaire sur || 
+        // const j = false            || true ; 
         // const j = true ; 
         console.log(j)
-
-
-
-
-
 
     </script>
 </body>
 
 </html>
+
+<!--
+    créer le fichier 04-exo.html qui contient une balise <script>
+    dans cette balise, vous allez mettre le code suivant 
+
+    const a = 2 ;
+    const b = 3 ;
+    const c = -5 ;
+
+    const verif1 =  a < b ;
+    console.log(verif1) ; // true ou false et pourquoi ?
+
+    const verif2 = a < b && b > c ;
+    console.log(verif2) ; // true ou false et pourquoi ?
+
+    const verif3 = a > b || b > c ;
+    console.log(verif3) ; // true ou false et pourquoi ?
+
+-->
