--- a/jour2/06-exo.html
+++ b/jour2/06-exo.html
@@ -11,7 +11,7 @@
 <body>
     <script>
         //const ville = "Marseille";
-        const ville = prompt("choisir une ville");
+        const ville = prompt("choisir une ville"); // formulaire sous forme de pop up (fenêtre surgissante)
 
         if (ville == "Paris") {
             console.log("vous habitez à Paris");
