--- a/jour2/08-exo.html
+++ b/jour2/08-exo.html
@@ -33,3 +33,13 @@
 </body>
 
 </html>
+// mercredi
+// boucle 
+// fonction 
+// tableau 
+// qcm 
+
+// jeudi 
+// objet 
+// DOM 
+// cas pratique 
