--- a/jour3/02-boucle.html
+++ b/jour3/02-boucle.html
@@ -79,9 +79,9 @@
 
 </html>
 <!--
-    1 Créer un nouveau fichier 03-exohtml ayant la balise <script>
+    1 Créer un nouveau fichier 03-exo.html ayant la balise <script>
 
-    en utilisant une boucle for afficher dans la console les chaines de caractères suivantes :
+    2 en utilisant une boucle for afficher dans la console les chaines de caractères suivantes :
     1 x 0 = 0
     1 x 1 = 1
     1 x 2 = 2
