--- a/jour3/04-exo.html
+++ b/jour3/04-exo.html
@@ -53,10 +53,18 @@
             */
         }
 
-
-
-
     </script>
 </body>
 
 </html>
+<!--
+    Créer un nouveau fichier 05-exo.html ayant la balise <script>
+
+    en utilisant une boucle , afficher dans la console les string suivantes :
+    4 x 2 = 8
+    4 x 4 = 16
+    4 x 6 = 24
+    4 x 8 = 32
+-->
+i = i + 2 
+i += 2 
