--- a/jour3/10-exo.html
+++ b/jour3/10-exo.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        const listeMarque = ["Toyota", "BMW", "Skoda", "Nissan"] ;
+        const listeMarque = ["Toyota", "BMW", "Skoda", "Nissan"];
         /*
         let i = 0 ;
             voiture n° 1 a la marque Toyota
@@ -21,10 +23,12 @@
             voiture n° 4 a la marque Nissan
         */
 
-        for(let i = 0 ; i <= 3 ; i++){
+        for (let i = 0; i <= 3; i++) {
             console.log(`voiture n° ${i + 1} a la marque ${listeMarque[i]}`)
         }
 
     </script>
 </body>
+
 </html>
+<!-- 11-objet.html -->
