--- a/jour3/11-objet.html
+++ b/jour3/11-objet.html
@@ -64,4 +64,6 @@
     le controlle technique doit être réalisé tous les 90000km, il reste 40000km avant le controle
     en 2025, Alain Doe  aura acheté son véhicule depuis 7 ans
 
+
+    le controlle technique doit être réalisé tous les 90000km, il reste ${90000 - vehicule.km}km avant le controle
 -->
