--- a/jour4/02-fonction.html
+++ b/jour4/02-fonction.html
@@ -9,6 +9,43 @@
 <body>
     <script>
         // 02-fonction.html
+        const a = "texte" ;
+        const b = 12 ;
+        const c = true ;
+        const d = [12,34] ;
+        const e = { prop : 123 };
+        // nous avons jusqu'à maintenant créé des variables qui stockent une ou plusieurs valeurs 
+        // une fonction est une variable dans laquelle on va stocker des instructions
+
+        // créer une fonction 
+        // déclarer une fonction 
+        function firstFonction (){ 
+            // écrire 
+            // des instructions
+            const total = 10 ;
+            console.log(total) ;
+        }
+
+        // exécuter les instructions qui sont stockées dans une fonction 
+        // appeler la fonction 
+        // utiliser la fonction 
+        firstFonction();
+
+        class Etudiant {}
+
     </script>
 </body>
 </html>
+
+<!--
+    créer le fichier 03-exo.html
+    créer une fonction 
+       - qui s'appelle calcul 
+       - n'a pas de paramètre
+       - les accolades contiennent les instructions suivantes :
+           créer une variable a qui contient le chiffre 30 
+           créer une variable b qui contient le chiffre 100 
+           afficher dans la console la somme de a + b  
+
+    exécuter la fonction calcul 
+-->
