--- a/jour4/04-fonction-parametre.html
+++ b/jour4/04-fonction-parametre.html
@@ -37,12 +37,22 @@
         function addition3(a, b) { // paramètres de fonction // argument
             console.log(a + b);
         }
-
         addition3(404, 212);
         addition3(123, 900);
         addition3("Victor ", "Hugo");
-
     </script>
 </body>
-
 </html>
+<!--
+    créer le fichier 05-exo.html
+    créer une fonction calculAireCercle
+    dispose d'un argument rayon
+    dans les accolades vous allez mettre les traitements suivants 
+         créer une variable resultat = rayon puissance 2 multiplié par 3,14
+         afficher le resultat dans la console
+
+    exécuter la fonction calculAireCercle pour un rayon de 30
+    exécuter la fonction calculAireCercle pour un rayon de 12
+    exécuter la fonction calculAireCercle pour un rayon de 12,45
+
+-->
