jour4 argument exo

--- a/jour4/05-exo.html
+++ b/jour4/05-exo.html
@@ -30,10 +30,20 @@ créer une fonction calculAireCercle
         calculAireCercle(12);
         calculAireCercle(12.45);
 
-        
-
-
-
     </script>
 </body>
 </html>
+<!-- 
+    créer le fichier 06-exo.html 
+    créer une fonction  calculAireRectangle
+    dispose de deux arguments largeur et hauteur
+    dans les accolades 
+            créer une variable resultat égal largeur fois hauteur
+            afficher le résultat dans la console
+
+    utiliser la fonction calculAireRectangle avec les valeurs suivantes : 
+                largeur = 10 / hauteur 12
+                largeur = 24 / hauteur 72
+                largeur = 44,5 / hauteur 22,76
+
+-->
