--- a/jour4/08-exo.html
+++ b/jour4/08-exo.html
@@ -13,7 +13,7 @@
         function min(a, b) {
             if (a > b) {
                 return b;
-            } else/*  if(  a <= b) */ {
+            } else /*  if(  a <= b) */ {
                 return a;
             }
         }
@@ -28,9 +28,10 @@
 
         const comparaison3 = min(0, 0);
         console.log(comparaison3);
-        console.log(min(0, 0));
+        console.log(min(0, 0)); // fin des concepts de base 
 
     </script>
 </body>
 
 </html>
+<!-- 09-document.html -->
