--- a/jour4/09-document.html
+++ b/jour4/09-document.html
@@ -47,9 +47,29 @@
             color : blue ;
         }
         */
+        let c = 0;
+        for (let i in document.querySelector("h1")) {
+            c++;
+        }
+        console.log(c) // 311 
 
 
     </script>
 </body>
 
 </html>
+<!--
+    créer le fichier 10-exo.html 
+
+    ajouter une balise h1 vide
+    ajouter une balise h2 vide
+    ajouter une balise p vide
+    ajouter une div ayant la class conclusion vide 
+
+    ajouter la balise script 
+        dans la balise script remplir la balise h1 avec le texte suivant : "exo1"
+        dans la balise script remplir la balise h2 avec le texte suivant : "découverte du DOM"
+        dans la balise script remplir la balise p avec le texte suivant : "lorem ipsum"
+        dans la balise script remplir la balise ayant la class conclusion avec le texte : je suis la conclusion de cet exercice
+
+-->
