--- a/jour5/00-question.html
+++ b/jour5/00-question.html
@@ -91,6 +91,7 @@
         for(let i = 0; i <= 2 ; i++){
             texte += `<p>${vehicule[i]}</p>` ;
         }
+        // <p>Renault</p><p>Peugeot</p><p>Nissan</p>
         document.querySelector("div .first").innerHTML = texte  ; 
 
 
