--- a/jour5/00-question.html
+++ b/jour5/00-question.html
@@ -95,10 +95,29 @@
         document.querySelector("div .first").innerHTML = texte  ; 
 
 
-
-
-
     </script>
 </body>
 
 </html>
+<!--
+    dans le dossier jour5 créer le fichier 01-exo.html
+    ajouter deux balises html 
+    h1 vide
+    div qui a la class exemple  sans text dedans vide
+    script 
+       1/ remplir la balise h1 avec le texte suivant : Exo de la journée 5
+
+       2/ créer une variable tableau => dont le nom est "sommaire" qui contient 4 valeurs :
+            js
+            html
+            css
+            php 
+
+        3 remplir la balise qui a la class exemple avec le texte suivant 
+        <ul>
+            <li>js</li>
+            <li>html</li>
+            <li>css</li>
+            <li>php</li>
+        </ul>
+-->
