--- a/jour5/02-exo.html
+++ b/jour5/02-exo.html
@@ -36,3 +36,45 @@
     </script>
 </body>
 </html>
+
+<!-- 
+    créer le fichier 03-exo.html 
+    div 
+    script
+        créer une tableau qui contient des objets
+        panier = [
+            nom = "PS4"
+            prix = 500
+            , 
+            nom = "Nintendo DS"
+            prix = 200
+            ,
+            nom = "PS5",
+            prix = 700
+        ]
+        injecter dans la balise div le texte suivant 
+        <section>
+            <h2>PS4</h2>
+            <p>prix HT = 500 € </p>
+        </section>
+        <section>
+            <h2>Nintendo DS</h2>
+            <p>prix HT = 200 € </p>
+        </section>
+        <section>
+            <h2>PS5</h2>
+            <p>prix HT = 700 € </p>
+        </section>
+
+
+// .innerHTML 
+// .style 
+// .addEventListener
+// .classList 
+
+// document.querySelector()
+// document.getElementById()
+// document.querySelectorAll()
+
+
+-->
