--- a/jour5/05-event.html
+++ b/jour5/05-event.html
@@ -46,9 +46,13 @@
             document.querySelector("button").innerHTML = "Ouvrir Menu";
         }
         document.querySelector(".close").addEventListener("click" , close)
-
-
     </script>
 </body>
 
 </html>
+<!--
+    créer le fichier 06-exo.html
+    dans ce fichier vous avez un bouton contenu le mot action et un p qui contient 10 mots
+    si je clique une fois sur le bouton => changer la taille de police du texte dans le p à 50px  
+    si je reclique une fois sur le bouton => changer la taille de police du texte dans le p à 16px  
+-->
