--- a/jour5/07-divers.html
+++ b/jour5/07-divers.html
@@ -39,10 +39,9 @@
     1 h1 vide
     1 p vide 
     script  
-        remplir le 1er h1 vers le texte suivant = "exo final"
+        remplir le 1er h1 avec le texte suivant = "exo final"
         remplir les 2 premiers p = "lorem ipsum"
         remplir les 3ème  p = "un peu de texte"
         le deuxième h1 avec "conclusion"
         le dernier p avec je sais manipuler le DOM
-        
 -->
