--- a/jour6/00-rappel.html
+++ b/jour6/00-rappel.html
@@ -17,3 +17,33 @@ email : malik.h@webdevpro.net
 github : https://github.com/webdevproformation/js-d-oct-2022
 
 => créer le dossier jour6 
+
+
+// Javascript est un langage "client"
+// langage qui va être exécuté dans "logiciel client" => navigateur web 
+
+// permet de manipuler le DOM (la page web)
+// javascript permet de sélectionner une ou plusieurs balises html 
+// et de les modifier => 
+// le contenu de la balise .innerHTML 
+// styliser la balise   .style["background"] = "red" ;
+
+function action(){}
+// ajouter un écouteur évènement .addEventListener("click" , action  )
+
+// à partir de 2015 (version 6 de Javascript)
+// document.querySelector("h1")
+// document.querySelector(".conclusion")
+// document.querySelector("#conclusion")
+// document.querySelector("div #conclusion")
+// document.querySelectorAll("div #conclusion")[0]
+
+// à partir de 1996 (version 1 , 2  3 de Javascript )
+document.getElementById("toto") => obligatoirement une balise avec un attribut id="toto"
+document.getElementsByTagName("h1")[0] => tableau de balises h1 
+document.getElementsByClassName("titi") => tableau de balises ayant la class="titi"
+
+// en les deux => jQuery => librairie qui a créée par John Resig (à l'age de 22 ans)
+// Permet de manipuler facilement le DOM
+
+// window 
