--- a/jour6/02-install.html
+++ b/jour6/02-install.html
@@ -13,15 +13,22 @@
         Content Delivery network => technologie qui permet de répondre le plus vite possible (sur un critère géographique)
     -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!-- <script src="jquery.js"></script> -->
     <script>
         // js de base 
-        document.querySelector("h1").innerHTML = "bonjour" ;
+        //document.querySelector("h1").innerHTML = "bonjour" ;
 
         // la même instruction avec jQuery
         // $()
         $("h1").html("bonjour")  ;
-
     </script>
 
 </body>
 </html>
+<!--
+    créer le fichier 03-exo.html
+    balise p
+    importer jquery
+    ouvrir une balise script
+        via jquery remplir la balise p avec le texte suivant => je sais installer jquery
+-->
