--- a/jour6/03-exo.html
+++ b/jour6/03-exo.html
@@ -14,7 +14,10 @@
     <script>
         const p = "coucou"
         $( "p" ).html("je sais installer jquery") ;
+        // document.querySelector("p").innerHTML = "je sais installer jquery" ;
+        // écrire moins pour faire autant voire plus 
         // $("selecteur").method("....") ; 
+        // fallback 
     </script>
 </body>
 </html>
