--- a/jour7/07-data.html
+++ b/jour7/07-data.html
@@ -9,6 +9,8 @@
 <body>
     <p data-color="blue" data-size="30px" data-prefix-texte="...">Lorem ipsum dolor sit amet.</p>
     <p data-color="red" data-size="12px" data-prefix-texte="lire la suite">Lorem ipsum dolor sit amet.</p>
+
+    <h1><!-- prepend --> texte <!-- append --> </h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script>
         const p1 = {
