--- a/jour8/00-rappel.html
+++ b/jour8/00-rappel.html
@@ -109,3 +109,10 @@
 </body>
 
 </html>
+<!--
+    créer le fichier 01-exo.html 
+    deux boutons 1er ouvrir / 2eme fermer
+    p avec 10 mots dedans
+    en jquery si je clique sur le 1er bouton => apparaitre le p avec un effet opacité 0 -> 1
+    en jquery si je clique sur le 2ème bouton => disparaitre le p avec un effet opacité 1 -> 0
+-->
