jour8 formulaire exemple 3

--- a/jour8/05-contact.html
+++ b/jour8/05-contact.html
@@ -95,3 +95,15 @@
 </body>
 
 </html>
+<!--
+    créer le fichier 06-exo.html
+    h1 qui contient s'inscrire à la newsletter
+    formulaire 
+        email
+        bouton de soumission
+
+    en javascript / jquery => récupérer la valeur saisie dans le champ email
+    verifier qu'elle est conforme 
+    si erreur => afficher un message d'erreur
+    sinon dire merci ! et vider le champ email
+-->
